新增live-bank-api模块，增加直播红包雨功能